fix: scrollbars are not hidden in firefox

--- a/src/assets/css/base/typography.css
+++ b/src/assets/css/base/typography.css
@@ -6,11 +6,11 @@
   @apply .tw-overflow-scroll; /* else text overflows even the
   body, then shows empty extra screen to the x (nobody 
   understands why)*/
-  -ms-overflow-style: none; /*  IE 10+ */
-  overflow: -moz-scrollbars-none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+  scrollbar-width: none; /* Firefox */
 
   &::-webkit-scrollbar {
-    width: 0 !important; /* // Safari and Chrome */
+    width: 0 !important; /* Safari and Chrome */
   }
 
   @modifier main {
